<resources>
    <string name="app_name">Image to PDF</string>
    <string name="txt_files">Files</string>
    <string name="txt_find_document">Find the document</string>
    <string name="txt_image_to_pdf">Image to PDF</string>
    <string name="txt_no_file">You don\'t have any file!</string>
    <string name="txt_explain">Click button below to create pdf file \nfrom images</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_share_app">Share App</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_no_result">No Results!</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="txt_all_images">All Images</string>
    <string name="txt_albums">Albums</string>
    <string name="txt_file_mgr">File Manager</string>
    <string name="converting">converting</string>
    <string name="cancel">cancel</string>
    <string name="txt_convert_to_pdf">Convert to PDF</string>
    <string name="txt_file_name">File name</string>
    <string name="txt_password">Password</string>
    <string name="txt_import">Import</string>
    <string name="todo">TODO</string>
    <string name="txt_preview">Preview</string>
</resources>